--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+server.port=8080
+server.servlet.session.timeout=3600
+
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://geoplan.iptime.org:30306/metro_gate?characterEncoding=UTF-8&serverTimezone=UTC
@@ -13,6 +16,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #show sql
 spring.jpa.properties.hibernate.show-sql=true
 #show parameter binding
-logging.level.org.hibernate.type.descriptor.sql=DEBUG
+logging.level."org.hibernate" = "ERROR"
 
-logging.level.org.hibernate.SQL=DEBUG
