--- a/build.gradle
+++ b/build.gradle
@@ -6,34 +6,33 @@ plugins {
 
 group = 'kr.co.geoplan'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.jetbrains:annotations:19.0.0'
+	implementation 'org.jetbrains:annotations:22.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation("org.mariadb.jdbc:mariadb-java-client")
-    implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.22'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation("org.junit.vintage:junit-vintage-engine") {
+		exclude group: "org.hamcrest", module: "hamcrest-core"
 	}
-
 	// Lombok
 	implementation ('org.projectlombok:lombok')
-	compileOnly ('org.projectlombok:lombok:1.18.16')
-	annotationProcessor ('org.projectlombok:lombok:1.18.16')
+	compileOnly ('org.projectlombok:lombok:1.18.22')
+	annotationProcessor ('org.projectlombok:lombok:1.18.22')
 
 	// Security, Authentication
 	implementation('org.springframework.boot:spring-boot-starter-security')
-	implementation(group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0')
-	implementation('io.jsonwebtoken:jjwt:0.9.0')
+	implementation(group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1')
+	implementation('io.jsonwebtoken:jjwt:0.9.1')
 
 	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.boot:spring-boot-starter-web')
